--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,30 +9,20 @@
             android:icon="@drawable/ic_nav_home"
             android:title="Home" />
         <item
-            android:id="@+id/nav_simple_line"
+            android:id="@+id/nav_distance"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Simple Line" />
+            android:title="Distance" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:id="@+id/nav_area"
+            android:icon="@drawable/ic_menu_share"
+            android:title="Area" />
         <item
-            android:id="@+id/nav_manage"
+            android:id="@+id/nav_volume"
+            android:icon="@drawable/ic_menu_camera"
+            android:title="Volume" />
+        <item
+            android:id="@+id/nav_test_sensors"
             android:icon="@drawable/ic_menu_manage"
             android:title="Test Sensors" />
     </group>
-
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
-        </menu>
-    </item>
-
 </menu>
