--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -6,4 +6,9 @@
         android:orderInCategory="100"
         android:title="@string/action_calculate"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_start"
+        android:orderInCategory="100"
+        android:title="@string/action_start"
+        app:showAsAction="ifRoom" />
 </menu>
