--- a/app/src/main/res/layout/distance_parameters.xml
+++ b/app/src/main/res/layout/distance_parameters.xml
@@ -50,6 +50,7 @@
                 android:id="@+id/rbParallel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:checked="true"
                 android:text="Parallel" />
 
             <RadioButton
@@ -82,6 +83,7 @@
                 android:id="@+id/rbVertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:checked="true"
                 android:text="Vertical" />
 
             <RadioButton
@@ -116,11 +118,12 @@
             android:layout_height="wrap_content"
             android:gravity="center">
 
-                <RadioButton
-                    android:id="@+id/rbAutomatic"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Automatic" />
+            <RadioButton
+                android:id="@+id/rbAutomatic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="Automatic" />
 
                 <RadioButton
                     android:id="@+id/rbManual"
