--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,13 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_calculate"
+        android:id="@+id/mark_point"
         android:orderInCategory="100"
-        android:title="@string/action_calculate"
-        app:showAsAction="ifRoom" />
-    <item
-        android:id="@+id/action_start"
-        android:orderInCategory="100"
-        android:title="@string/action_start"
+        android:title="@string/mark_point"
         app:showAsAction="ifRoom" />
 </menu>
