--- a/app/src/main/res/layout/activity_distance.xml
+++ b/app/src/main/res/layout/activity_distance.xml
@@ -18,4 +18,21 @@
         android:src="@drawable/ic_camera_focus"
         android:tint="@color/colorAccent" />
 
+    <TextView
+        android:id="@+id/mark_point"
+        android:layout_margin="20dp"
+        android:layout_gravity="center"
+        android:layout_centerInParent="true"
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
+        android:background="@drawable/circle_background"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#FFF"
+        android:textStyle="bold"
+        android:fontFamily="sans-serif"
+        android:text="A"
+        android:textSize="20dp"
+        android:elevation="10dp"/>
+
 </RelativeLayout>
