--- a/app/src/main/res/layout/activity_distance_parameters.xml
+++ b/app/src/main/res/layout/activity_distance_parameters.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.DistanceParametersActivity">
+    tools:context=".activities.DistanceParametersActivity"
+    android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -20,11 +21,12 @@
 
     </android.support.design.widget.AppBarLayout>
 
-
-    <include
-        layout="@layout/content_distance_parameters"
+    <FrameLayout
+        android:id="@+id/content_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="56dp" />
+        android:layout_height="match_parent">
 
-</android.support.design.widget.CoordinatorLayout>
+    </FrameLayout>
+
+
+</LinearLayout>
