--- a/app/src/main/res/layout-v26/home.xml
+++ b/app/src/main/res/layout-v26/home.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/textView2"
@@ -11,7 +10,8 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_margin="20dp"
-        android:lineSpacingMultiplier="2"
+        android:lineSpacingMultiplier="1.5"
         android:textSize="12sp"
-        android:text="@string/home"/>
+        android:text="@string/home"
+        android:justificationMode="inter_word"/>
 </RelativeLayout>
