--- a/app/src/main/res/layout/activity_points.xml
+++ b/app/src/main/res/layout/activity_points.xml
@@ -59,5 +59,19 @@
             app:backgroundTint="@color/colorAccent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/cancel_point"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:src="@drawable/ic_clear_white"
+            app:backgroundTint="@color/colorAccent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
     </android.support.constraint.ConstraintLayout>
 </RelativeLayout>
