--- a/app/src/main/res/layout/sensor_test.xml
+++ b/app/src/main/res/layout/sensor_test.xml
@@ -39,11 +39,11 @@
             android:textSize="18sp" />
 
         <TextView
-            android:id="@+id/tvAzimut"
+            android:id="@+id/tvAzimuth"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:text="Azimut: 0"
+            android:text="Azimuth: 0"
             android:textSize="18sp" />
 
     </LinearLayout>
