Added points and angles on Results

--- a/app/src/main/res/layout/fragment_results.xml
+++ b/app/src/main/res/layout/fragment_results.xml
@@ -13,7 +13,9 @@
         android:layout_height="match_parent"
         android:clickable="true"
         android:scrollbars="vertical"
-        android:focusable="true" >
+        android:focusable="true"
+        android:paddingBottom="48dp"
+        android:clipToPadding="false">
     </android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
