--- a/app/src/main/res/layout/dialog_rename.xml
+++ b/app/src/main/res/layout/dialog_rename.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <EditText
-        android:id="@+id/rename_edittext"
+        android:id="@+id/rename_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text=""
