--- a/app/src/main/res/layout/list_row_points.xml
+++ b/app/src/main/res/layout/list_row_points.xml
@@ -28,12 +28,12 @@
             android:layout_weight="1">
 
             <TextView
-                android:id="@+id/angleName"
+                android:id="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:text="Test Angle"
+                android:text="Test Point"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
