--- a/app/src/main/res/layout/activity_add_vector.xml
+++ b/app/src/main/res/layout/activity_add_vector.xml
@@ -24,7 +24,8 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_margin="20dp"
-        android:layout_weight="2" />
+        android:layout_weight="2"
+        tools:ignore="ContentDescription" />
 
     <TableLayout
         android:layout_width="match_parent"
