--- a/app/src/main/res/layout/activity_distance.xml
+++ b/app/src/main/res/layout/activity_distance.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -16,7 +17,8 @@
         android:layout_centerInParent="true"
         android:background="@android:color/transparent"
         android:src="@drawable/ic_camera_focus"
-        android:tint="@color/colorAccent" />
+        android:tint="@color/colorAccent"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/mark_point"
