Implemented adding angles completely

--- a/app/src/main/res/layout/dialog_rename.xml
+++ b/app/src/main/res/layout/dialog_rename.xml
@@ -11,6 +11,7 @@
         android:text=""
         android:hint="Name"
         android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"/>
+        android:layout_marginEnd="20dp"
+        android:inputType="textShortMessage"/>
 
 </LinearLayout>
