--- a/app/src/main/res/menu/point_main.xml
+++ b/app/src/main/res/menu/point_main.xml
@@ -3,15 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/help"
+        android:icon="@drawable/ic_help_white"
         android:orderInCategory="100"
         android:title=""
-        android:icon="@drawable/ic_help_white"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/add_point"
-        android:orderInCategory="200"
         android:icon="@drawable/ic_add_white"
+        android:onClick="showPopup"
+        android:orderInCategory="200"
         android:title=""
-        app:showAsAction="ifRoom"
-        android:onClick="showPopup"/>
+        app:showAsAction="ifRoom" />
 </menu>
