--- a/app/src/main/res/layout/activity_add_area.xml
+++ b/app/src/main/res/layout/activity_add_area.xml
@@ -6,7 +6,7 @@
     android:gravity="center_horizontal|top"
     android:orientation="vertical"
     android:paddingBottom="70dp"
-    tools:context=".activities.AddAngleActivity">
+    tools:context=".activities.AddAreaActivity">
 
     <TextView
         android:id="@+id/title"
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:gravity="center"
-        android:text="ADD ANGLE"
+        android:text="ADD AREA"
         android:textColor="@color/black"
         android:textSize="22sp"
         android:textStyle="bold" />
