--- a/app/src/main/res/layout/activity_add_angle.xml
+++ b/app/src/main/res/layout/activity_add_angle.xml
@@ -25,6 +25,7 @@
         android:layout_height="0dp"
         android:layout_margin="20dp"
         android:layout_weight="2"
+        android:src="@drawable/angle"
         tools:ignore="ContentDescription" />
 
     <TableLayout
