--- a/app/src/main/res/layout/activity_add_area.xml
+++ b/app/src/main/res/layout/activity_add_area.xml
@@ -53,6 +53,7 @@
         android:layout_height="0dp"
         android:layout_margin="20dp"
         android:layout_weight="2"
+        android:src="@drawable/areatriangle"
         tools:ignore="ContentDescription" />
 
     <TableLayout
