--- a/app/src/main/res/layout/activity_add_point.xml
+++ b/app/src/main/res/layout/activity_add_point.xml
@@ -24,7 +24,9 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_margin="20dp"
+        android:padding="20dp"
         android:layout_weight="2"
+        android:src="@drawable/point"
         tools:ignore="ContentDescription" />
 
     <TableLayout
