--- a/app/src/main/res/layout/activity_add_vector.xml
+++ b/app/src/main/res/layout/activity_add_vector.xml
@@ -25,6 +25,8 @@
         android:layout_height="0dp"
         android:layout_margin="20dp"
         android:layout_weight="2"
+        android:src="@drawable/vector"
+        android:padding="20dp"
         tools:ignore="ContentDescription" />
 
     <TableLayout
