--- a/app/src/main/res/layout/activity_add_point.xml
+++ b/app/src/main/res/layout/activity_add_point.xml
@@ -83,7 +83,7 @@
                 android:id="@+id/coordinate_x"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
+                android:inputType="numberDecimal|numberSigned"
                 android:labelFor="@+id/x_label"
                 android:layout_weight="2"
                 android:textAlignment="center"
@@ -110,7 +110,7 @@
                 android:id="@+id/coordinate_y"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
+                android:inputType="numberDecimal|numberSigned"
                 android:labelFor="@+id/y_label"
                 android:layout_weight="2"
                 android:textAlignment="center"
@@ -137,7 +137,7 @@
                 android:id="@+id/coordinate_z"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
+                android:inputType="numberDecimal|numberSigned"
                 android:labelFor="@+id/y_label"
                 android:layout_weight="2"
                 android:textAlignment="center"
