--- a/app/src/main/res/layout/activity_add_volume.xml
+++ b/app/src/main/res/layout/activity_add_volume.xml
@@ -53,7 +53,7 @@
         android:layout_height="0dp"
         android:layout_margin="20dp"
         android:layout_weight="2"
-        android:src="@drawable/volumepyramid"
+        android:src="@drawable/volumetrianglepyramid"
         tools:ignore="ContentDescription" />
 
     <TableLayout
