--- a/app/src/main/res/layout/list_row_volumes.xml
+++ b/app/src/main/res/layout/list_row_volumes.xml
@@ -49,8 +49,8 @@
                     android:layout_marginEnd="5dp"
                     android:layout_marginBottom="5dp"
                     android:layout_weight="1.5"
-                    android:gravity="start"
-                    android:text="22,41 cm³"
+                    android:gravity="center"
+                    android:text="volume 22,41 cm³"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -68,7 +68,7 @@
                         android:layout_marginBottom="5dp"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="20,3 cm²"
+                        android:text="base 20,3 cm²"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -81,7 +81,7 @@
                         android:layout_marginBottom="5dp"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="3 cm"
+                        android:text="height 3 cm"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
