--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,13 +3,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center_vertical|top">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/emeasure"
+        android:layout_marginTop="20dp"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_margin="20dp"
+        android:gravity="center"
+        android:textSize="22sp"
+        android:textAlignment="center"
+        android:lineSpacingMultiplier="1.5"
+        android:text="Measure allows you to very easily measure a variety of magnitudes in just a few clicks. Try it out!"/>
 
     <Button
         android:id="@+id/getstartedbt"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Get Started!"
-        />
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:textSize="16sp"
+        android:padding="26sp"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/colorPrimary"/>
 
 </LinearLayout>
