--- a/app/src/main/res/layout/fragment_tutorial_measure.xml
+++ b/app/src/main/res/layout/fragment_tutorial_measure.xml
@@ -12,51 +12,35 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:textSize="16sp"
         android:text="To mark the points, rotate the device so the camera preview shown is aiming the desired point."/>
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:textSize="16sp"
+        android:text="To do so, set the phone vertically, and then rotate the phone around so that the camera points in the direction of the point"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:textSize="16sp"
+        android:text="Once that is done, rotate the device as it was nodding to focus on the desired point"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:textSize="16sp"
         android:text="After correctly positioning the device, wait a second for the sensors to stabilize and mark the point by clicking the bottom center button."/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/ic_warning_red_512dp"
-            android:layout_marginEnd="20dp"/>
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textColor="@color/dark_red"
-            android:text="To improve values from the sensors, avoid the azimuth rotation, shown in the picture"/>
-
-        <ImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_margin="10dp"/>
-
-    </LinearLayout>
-
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:textSize="16sp"
         android:text="Once all the desired points have been measured, click the bottom-right button to see the results."/>
