--- a/app/src/main/res/layout/fragment_tutorial_video.xml
+++ b/app/src/main/res/layout/fragment_tutorial_video.xml
@@ -16,6 +16,6 @@
         android:layout_weight="1"
         android:layout_margin="10dp"
         android:textSize="16sp"
-        android:text="The following video shows a example of the process of measuring and obtaining results"/>
+        android:text="The following video shows a measuring example"/>
 
 </LinearLayout>
